# Copyright (c) 2023 Arm Limited.
#
# SPDX-License-Identifier: MIT
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

cc_library(
    name = "framework",
    srcs = glob(
        [
            "*.cpp",
            "command_line/*.cpp",
            "printers/*.cpp",
            "datasets/*.cpp",
            "instruments/*.cpp",
            "instruments/*.hpp",
        ],
        exclude = [
            "**/*PMU*",
            "**/*OpenCL*",
            "**/*MaliCounter*",
        ],
    ),
    hdrs = glob([
        "*.h",
        "command_line/*.h",
        "printers/*.h",
        "datasets/*.h",
        "instruments/*.h",
    ]),
    copts = [
        "-Wno-overloaded-virtual",
    ] + select({
                  "//:arch_armv8-a": ["-march=armv8-a"],
                  "//:arch_armv8.2-a+fp16": ["-march=armv8.2-a+fp16"],
                  "//conditions:default": ["-march=armv8-a"],
              }),
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "//arm_compute:core_headers",
        "//arm_compute:graph_headers",
        "//arm_compute:runtime_headers",
        "//support",
        "//utils",
    ],
)
